# Real2Edit2Real

./: .gitignore  .gitmodules  README.md  requirements.txt
configs/: lift_box.yaml  mug_to_basket.yaml  pour_water.yaml  scan_barcode.yaml
editing/: setup.py
editing/demo_generation/: a2d.yaml  a2d_solver.py  demogen.py  format_utils.py  geometry_utils.py  pose_utils.py  vis_plotly.py  vis_utils.py
scripts/: generate_demo.sh  generate_demo_video.sh  preprocess_demo.sh
scripts/installation/: 1_install_env.sh  2_install_curobo.sh  3_download_ckpts.sh  3_download_data.sh
tools/: generate_demo.py  inpaint_utils.py  preprocess_demo.py  vis_joint.py
vggt/: preprocess_agibot_dataset.py  pyproject.toml  train.py  train.sh  train_util.py
vggt/config/: eval_real_config.yaml  eval_sim_config.yaml  train_config.yaml
vggt/training/: loss.py
vggt/training/data/: base_dataset.py  composed_dataset.py  dynamic_dataloader.py
vggt/training/data/datasets/: agibot_sim.py  agibot_world.py
vggt/vggt/layers/: attention.py
vggt/vggt/utils/: geometry.py  load_fn.py
videogen/: setup.py  train.sh
videogen/configs/: action_depth_canny_cosmos2.yaml
videogen/lib/data/: agibotworld_dataset.py
videogen/lib/models/: __init__.py
videogen/lib/pipelines/: pipeline_cosmos2_acwm.py  pipeline_cosmos2_video2world.py
videogen/lib/trainers/: action_depth_canny_cond_trainer.py  base_trainer.py
videogen/lib/utils/: geometry_utils.py  logging.py  misc.py  (+1 more)
videogen/scripts/: infer_action_depth_canny_cosmos2_multigpu.py  infer_utils.py  train_action_depth_canny_cosmos2.py
(+13 files in other folders)
